<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:id="@+id/nav_coupons"-->
<!--            android:icon="@drawable/ic_nav_coupon"-->
<!--            android:title="@string/menu_coupons" />-->
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/menu_about" />

    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_nav_logout"
        android:title="@string/menu_logout" />


</menu>
