<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data></data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg5"
        android:orientation="vertical"
        tools:context=".Activities.RefferalActivity">

        <include layout="@layout/custom_toolbar_menu"
            android:id="@+id/include_toolbar"
            />

        <RelativeLayout
            android:layout_margin="16dp"
            android:background="@drawable/edittext_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:padding="@dimen/standard_margin"
                android:background="@null"
                android:singleLine="true"
                android:id="@+id/et_coupon_code"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/enter_your_code"
                android:layout_width="200dp"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_marginLeft="@dimen/standard_margin"
                android:background="@drawable/shape_round_rect"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:textAllCaps="false"
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/apply"
                android:textColor="@android:color/white"
                />



        </RelativeLayout>

        <TextView
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applied_coupon"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@android:color/transparent"
            />



        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/refferal_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

</layout>