<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/bg5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        tools:context=".Activities.OtpActivity">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/round_back_btn"
            android:src="@drawable/ic_back_arrow" />

        <ImageView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bg5" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@+id/iv_logo"-->
        <!--            android:layout_centerInParent="true"-->
        <!--            android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
        <!--            android:layout_marginTop="@dimen/double_standard_margin"-->
        <!--            android:layout_marginRight="@dimen/activity_horizontal_margin"-->
        <!--            android:elevation="3dp"-->
        <!--            android:background="@drawable/shap_otp"-->
        <!--            app:cardBackgroundColor="@android:color/transparent"-->
        <!--            app:cardCornerRadius="10dp">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_marginLeft="@dimen/double_standard_margin"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/double_standard_margin"
            android:layout_marginBottom="@dimen/double_standard_margin"
            android:background="@drawable/shap_otp"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/verifynumber"
                android:textColor="@color/card_color"
                android:textSize="@dimen/double_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:gravity="center"
                android:text="@string/otptext"
                android:textColor="@color/card_color"
                android:textSize="@dimen/text_size2" />

            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/dummynumber"
                android:textColor="@color/card_color"
                android:textSize="@dimen/text_size1"
                android:textStyle="bold" />

            <com.chaos.view.PinView
                android:id="@+id/pinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textColor="@color/card_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:itemCount="4"
                app:viewType="line" />


            <Button
                android:id="@+id/btn_verify"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/edittext_shape"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/verify"
                android:textColor="@color/btn_color"
                android:textSize="@dimen/text_size1"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/otp_not_received"
                android:textColor="@color/nav_color"
                android:textSize="@dimen/text_size1" />

            <TextView
                android:id="@+id/resend"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/edittext_shape"
                android:gravity="center"
                android:padding="@dimen/activity_vertical_margin"
                android:text="R S E N D"
                android:textAllCaps="true"
                android:textColor="@color/btn_color"
                android:textSize="@dimen/text_size1"
                android:textStyle="bold" />


        </LinearLayout>

        <!--        </androidx.cardview.widget.CardView>-->

    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</layout>