<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg5"
        android:orientation="vertical"
        tools:context=".Activities.LoginActivity">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="172dp"
            android:background="@drawable/logo"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/double_standard_margin"
                android:layout_marginRight="@dimen/double_standard_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">


                <EditText
                    android:id="@+id/edit_mobilenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/edit_edittex_bg"
                    android:hint="@string/mobilenumber"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:maxLength="10"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:textAlignment="center"
                    android:textColor="@color/card_color"
                    android:textColorHint="@color/card_color"
                    android:textSize="@dimen/text_size1" />

                <ImageView
                    android:id="@+id/icon_mobile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_mobile" />


                <Button
                    android:id="@+id/get_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_mobilenumber"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/btn_bg"
                    android:padding="@dimen/activity_vertical_margin"
                    android:text="@string/getotp"
                    android:textColor="@color/btn_color"
                    android:textSize="@dimen/text_size2" />

                <Button
                    android:id="@+id/signup_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:background="@drawable/btn_bg"
                    android:padding="@dimen/activity_vertical_margin"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size2" />


            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>

</layout>