<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg5"
        tools:context=".Activities.RegisterActivity">

        <ImageView
            android:id="@+id/img_back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/round_back_btn"
            android:src="@drawable/ic_back_arrow" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_image"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="172dp"
            android:src="@drawable/profile_ic"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/iv_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="210dp"
            android:layout_marginRight="130dp"
            android:src="@drawable/add_icon" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/double_standard_margin"
            android:layout_marginRight="@dimen/double_standard_margin">

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">


                <EditText
                    android:id="@+id/edit_fullname"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"

                    android:background="@drawable/edit_edittex_bg"
                    android:hint="@string/fullname"
                    android:inputType="text"
                    android:padding="@dimen/activity_vertical_margin"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="@color/card_color"
                    android:textColorHint="@color/card_color"
                    android:textSize="@dimen/text_size1" />

                <ImageView
                    android:id="@+id/icon_person"

                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:backgroundTint="@color/card_color"
                    android:src="@drawable/icon_user" />


                <EditText
                    android:id="@+id/edit_mobilenumber"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon_person"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/edit_edittex_bg"
                    android:hint="@string/mobilenumber"
                    android:inputType="number"

                    android:maxLength="10"
                    android:padding="@dimen/activity_vertical_margin"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="@color/card_color"
                    android:textColorHint="@color/card_color"
                    android:textSize="@dimen/text_size1" />

                <ImageView
                    android:id="@+id/icon_mobile"

                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/edit_fullname"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:src="@drawable/icon_mobile" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon_mobile"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/edit_edittex_bg"
                    android:gravity="center"

                    >

                    <TextView
                        android:padding="@dimen/activity_vertical_margin"
                        android:id="@+id/tv_selectcity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:gravity="center"
                        android:hint="@string/select_your_city"
                        android:textColor="@color/card_color"
                        android:textColorHint="@color/card_color" />


                </LinearLayout>


                <ImageView
                    android:id="@+id/icon_location"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/edit_mobilenumber"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:src="@drawable/icon_location" />


                <Button
                    android:id="@+id/get_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_location"
                    android:layout_marginTop="@dimen/double_standard_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/btn_bg"
                    android:padding="@dimen/activity_vertical_margin"
                    android:text="@string/getotp"
                    android:textColor="@color/btn_color"
                    android:textSize="@dimen/text_size2" />


            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>

</layout>